[package]
name = "cnctd_config"
version = "0.1.0"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Store app configurations in a json file"
repository = "https://github.com/Connected-Dot/cnctd_config"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
